Add Google site verification and update pricing for sponsors
Introduced a new Google site verification file to the static directory for site ownership confirmation. Updated the landing page to reflect that the pricing for sponsor universities (UNEMI, VIU, or UCLM) is now free instead of $50.00.

--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -667,7 +667,7 @@
                                  class="pricing-s1 mb30 wow fadeInUp h-100 w-100 d-flex flex-column">
                                 <div class="top">
                                     <h2>Special Price for Sponsor Universities (UNEMI, VIU, or UCLM)</h2>
-                                    <p class="price"><span class="currency id-color">$</span> <b>50.00</b></p>
+                                    <p class="price"><span class="currency id-color">Free</span></p>
                                 </div>
                                 <div class="bottom">
                                     <ul>
