--- a/templates/email/registro_usuario.html
+++ b/templates/email/registro_usuario.html
@@ -1,16 +1,15 @@
-{% extends 'email/emailbase.html' %}
-
-{% block titulo %}{{ sucursal }}{% endblock %}
+{% extends 'email/base_ictiair.html' %}
 {% block content %}
-    <div style="color:#555555; line-height:120%; font-family:Arial,'Helvetica Neue',Helvetica,sans-serif; padding-right:10px; padding-left:10px; padding-top:10px; padding-bottom:10px">
-        <div style="font-size:12px; line-height:14px; color:#555555; font-family:Arial,'Helvetica Neue',Helvetica,sans-serif; text-align:left">
-            <p style="margin:0; font-size:14px; line-height:17px">Hola {{ instancia.first_name }}, </p>
-            <p style="margin:0; font-size:14px; line-height:17px">Su solicitud de registro fue completada, sus credenciales de acceso son:</p>
-            <p style="margin:0; font-size:14px; line-height:17px"><b>Username:</b> {{ instancia.username }}</p>
-            <p style="margin:0; font-size:14px; line-height:17px"><b>Pass:</b> {{ instancia.documento }}</p>
-            <p style="margin:0; font-size:14px; line-height:17px">Usa tus credenciales para cambiar tu contraseña en nuestro sitio web seguro.</p>
-            <p style="margin:0; font-size:14px; line-height:17px;text-align: center;">
-                <span><a href="{{ url }}" target="_blank"><strong> Ir al sitio web </strong></a></span>
+    <div style="font-size:12px;padding: 5px; line-height:14px; color:#555555; font-family:Arial,'Helvetica Neue',Helvetica,sans-serif; text-align:left">
+        <div style="font-size:14px; color:#555555; text-align:left;">
+            <p style="margin:0;">Hello {{ instance.datos }},</p>
+            <p style="margin:0;">Your registration request has been successfully completed. Here are your access credentials:</p>
+            <p style="margin:0;"><strong>Username:</strong> {{ instance.username }}</p>
+            <p style="margin:0;"><strong>Password:</strong> {{ password }}</p>
+            <p style="margin:0;">Please use these credentials to log in and change your password on our secure website.</p>
+            <p style="margin:0; text-align:center; padding-top:20px;">
+                <a href="{{ url }}" target="_blank"
+                   style="font-weight:bold; text-decoration:none; color:#007BFF; background-color:#f8f9fa; padding:10px 20px; border-radius:5px; border:1px solid #ddd;">Go to Website</a>
             </p>
         </div>
     </div>
