--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -241,11 +241,9 @@
 <link rel="stylesheet" href="/static/spinner.css?0.6" type="text/css"/>
 <link rel="stylesheet" href="/static/izitoast/css/iziToast.min.css">
 <script src="/static/izitoast/js/iziToast.min.js" type="text/javascript"></script>
-{#<link href="/static/selectmultiple/select2.min.css?2.1" rel="stylesheet">#}
-{#<link href="/static/selectmultiple/select2.min.js" rel="stylesheet">#}
-<link href="/static/select2/select2.min.css?2.5" rel="stylesheet">
-<script src="/static/select2/select2.min.js?2"></script>
-<script src="/static/select2/i18n/es.js?0.2"></script>
+<link href="/static/selectmultiple/select2.min.css?1" rel="stylesheet">
+<script src="/static/selectmultiple/select2.min.js"></script>
+<script src="/static/selectmultiple/i18n/es.js"></script>
 <!-- OWL CAROUSEL -->
 <link rel="stylesheet" href="/static/OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
 <link rel="stylesheet" href="/static/OwlCarousel2-2.3.4/dist/assets/owl.theme.default.min.css">
@@ -296,6 +294,13 @@
 <script src="/static/exhibiz/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
 
 
+<script src="/static/dropzone/dropzone.js"></script>
+<link rel="stylesheet" href="/static/dropzone/dropzone.css">
+
+<script src="/static/assets/plugins/switchery/switchery.min.js"></script>
+<script src="/static/js/renderSwicheryControl.js"></script>
+<link rel="stylesheet" href="/static/assets/plugins/switchery/switchery.min.css">
+
 <script>
 
     jQuery(document).ready(function () {
@@ -327,7 +332,7 @@
         });
     });
 
-    window.onload = function () {
+   window.onload = function () {
         {% if messages %}
             {% for message in messages %}
                 Swal.fire('{{ message }}', '{{ nombreempresa }}', '{% if message.tags %}{{ message.tags }}{% endif %}');
@@ -496,6 +501,13 @@
 </script>
 {% include 'service_worker_unregister.html' %}
 <script src="/static/webpush/registerSw.js?v=3.0"></script>
+
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous"
+        src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v16.0&appId=5465147420185697&autoLogAppEvents=1"
+        nonce="GutKLHL1"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="/static/jquery.blockUI.js"></script>
 {% block jscript %}
 {% endblock %}
 
