--- a/templates/public/navbar.html
+++ b/templates/public/navbar.html
@@ -39,18 +39,20 @@
                         </ul>
                     </li>
 
-                    <li><a href="{% if request.path == '/' %}/#section-topics{% else %}/s{% endif %}">Topics<span></span></a>
+                    <li>
+                        <a href="{% if request.path == '/' %}/#section-topics{% else %}/s{% endif %}">Topics<span></span></a>
                     </li>
 
-                    <li><a href="{% if request.path == '/' %}/#section-speakers{% else %}/{% endif %}">Committees<span></span></a>
+                    <li>
+                        <a href="{% if request.path == '/' %}/#section-speakers{% else %}/{% endif %}">Committees<span></span></a>
                         <ul>
-{#                            <li>#}
-{#                                <a href="{% if request.path == '/' %}/#speakers{% else %}/{% endif %}">Speakers</a>#}
-{#                            </li>#}
+                            {#                            <li>#}
+                            {#                                <a href="{% if request.path == '/' %}/#speakers{% else %}/{% endif %}">Speakers</a>#}
+                            {#                            </li>#}
                             <li><a href="{% if request.path == '/' %}/#section-speakers{% else %}/{% endif %}">Organizing
                                 Committee</a></li>
-{#                            <li><a href="{% if request.path == '/' %}/#gen_chairs{% else %}/{% endif %}">General#}
-{#                                Chairs</a></li>#}
+                            {#                            <li><a href="{% if request.path == '/' %}/#gen_chairs{% else %}/{% endif %}">General#}
+                            {#                                Chairs</a></li>#}
                         </ul>
                     </li>
 
@@ -61,7 +63,9 @@
                     {% else %}
                         <li><a href="javascript:void(0)">Hello, {{ request.user.primernombre }}<span></span></a>
                             <ul>
-                                <li><a href="/panel/"><i class="fa fa-lock"></i> Administration</a></li>
+                                {% if request.user.get_perfil_adm %}
+                                    <li><a href="/panel/"><i class="fa fa-lock"></i> Administration</a></li>
+                                {% endif %}
                                 <li><a href="/logout/"><i class="fa fa-sign-out"></i> Log Out</a></li>
                                 {% if sesion_anterior %}
 
