feat: registro inscripciones

--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -616,7 +616,7 @@
         </div>
     </section>
     <!-- section close -->
-    <section id="section-ticket" aria-label="section-services-tab"
+    <section id="section-register" aria-label="section-services-tab"
              data-bgimage="url(static/images/bg/2.jpg) fixed center no-repeat">
         <div class="wm wm-border wow fadeInDown">fees</div>
         <div class="container">
