--- a/landing/templates/conference/committee_category/listado.html
+++ b/landing/templates/conference/committee_category/listado.html
@@ -79,6 +79,11 @@
                                             <i class="fas fa-eye"></i> Ver
                                         </a>
 
+                                        <a class="dropdown-item" title="Ver {{ modulo }}"
+                                           href="?action=members&id={{ l.pk }}">
+                                            <i class="fas fa-eye"></i> Members ({{ l.get_members_all.count }})
+                                        </a>
+
                                         <a class="dropdown-item" title="Editar {{ modulo }}"
                                            onclick="formModal({{ l.pk }}, 'Editar: {{ l.name }}', 'change')"
                                            href="javascript:void(0);">
