--- a/landing/templates/conference/committee_category/members/listado.html
+++ b/landing/templates/conference/committee_category/members/listado.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
+{% block atras %}{{ request.path }}{% endblock %}
 {% block content %}
     <form method="GET">
+        <input type="hidden" name="action" value="{{ action }}">
+        <input type="hidden" name="id" value="{{ cab.pk }}">
         <div class="container-fluid px-0">
             <div class="form-row">
                 <div class="col-md-6 col-sm-12 offset-md-6">
@@ -11,7 +14,7 @@
                             <button class="btn btn-primary" type="submit" id="button-addon2"><i
                                     class="fa fa-search"></i></button>
                             {% if url_vars %}
-                                <a title="Ver todo" href="{{ ruta }}?{{ dict_url_vars }}" class="btn btn-primary">
+                                <a title="Ver todo" href="{{ ruta }}?action={{ action }}&id={{ cab.pk }}" class="btn btn-primary">
                                     <i class="fas fa-sync-alt"></i>
                                 </a>
                             {% endif %}
@@ -24,7 +27,7 @@
 
 
     <div class="mb-3">
-        <a onclick="formModal(0, 'Agregar', 'add')" href="javascript:void(0);" class="btn btn-success"><i
+        <a onclick="formModal({{ cab.pk }}, 'Agregar', 'addmember')" href="javascript:void(0);" class="btn btn-success"><i
                 class="fas fa-plus-circle mr-2"></i>
             Nueva Categoría de comite</a>
     </div>
@@ -36,9 +39,6 @@
                 <table id="tabla" class="table table-hover table-td-valign-middle table-bordered">
                     <thead class="thead-dark">
                     <tr>
-                        <th class="text-center">
-                            Categoría
-                        </th>
                         <th class="text-center">
                             Nombre
                         </th>
@@ -62,9 +62,6 @@
                     <tbody>
                     {% for l in listado %}
                         <tr>
-                            <td style="text-align: center">
-                                {{ l.category }}
-                            </td>
                             <td style="text-align: center">
                                 {{ l.name }}
                             </td>
@@ -137,19 +134,19 @@
                                     <div class="dropdown-menu dropdown-menu-right">
 
                                         <a class="dropdown-item" title="Ver {{ modulo }}"
-                                           onclick="formModal({{ l.pk }}, 'Ver registro: {{ l.name }}', 'ver')"
+                                           onclick="formModal({{ l.pk }}, 'Ver registro: {{ l.name }}', 'vermember')"
                                            href="javascript:void(0);">
                                             <i class="fas fa-eye"></i> Ver
                                         </a>
 
                                         <a class="dropdown-item" title="Editar {{ modulo }}"
-                                           onclick="formModal({{ l.pk }}, 'Editar: {{ l.name }}', 'change')"
+                                           onclick="formModal({{ l.pk }}, 'Editar: {{ l.name }}', 'changemember')"
                                            href="javascript:void(0);">
                                             <i class="fas fa-edit"></i> Editar
                                         </a>
 
                                         <a class="dropdown-item" title="Eliminar {{ modulo }}"
-                                           onclick="eliminarajax({{ l.pk }}, '{{ l.name }}', 'delete', '{{ dict_url_vars }}')"
+                                           onclick="eliminarajax({{ l.pk }}, '{{ l.name }}', 'deletemember', '{{ dict_url_vars }}')"
                                            href="javascript:void(0);">
                                             <i class="fas fa-trash"></i> Eliminar
                                         </a>
