--- a/landing/templates/conference/sponsor/lista_category_sponsor.html
+++ b/landing/templates/conference/sponsor/lista_category_sponsor.html
@@ -78,6 +78,11 @@
                                             <i class="fas fa-eye"></i> Ver
                                         </a>
 
+                                        <a class="dropdown-item" title="Ver {{ modulo }}"
+                                           href="?action=sponsors&id={{ l.pk }}">
+                                            <i class="fas fa-eye"></i> Sponsors ({{ l.get_sponsors_all.count }})
+                                        </a>
+
                                         <a class="dropdown-item" title="Editar {{ modulo }}"
                                            onclick="formModal({{ l.pk }}, 'Editar: {{ l.name }}', 'change')" href="javascript:void(0);">
                                             <i class="fas fa-edit"></i> Editar
