feat: registro inscripciones

--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -8,7 +8,7 @@
     <title>{{ titulo }} | {{ nombreempresa }}</title>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
     <meta name="description" content="{{ nombreempresa }}">
-    <meta name="keywords" content="{{ keywords }}">
+    <meta name="keywords" content="ICTIAIR, congreso internacional, inteligencia artificial, investigación, tecnología, evento académico, autores, innovación tecnológica, AI research, call for papers, conferencia internacional, UNEMI, International Conference on Technological Innovation and AI Research">
     <meta name="theme-color" content="#2874A6">
     {% if request.user.is_authenticated %}
         <meta name="user_id" content="{{ request.user.pk }}">
