--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -10,6 +10,7 @@
     <meta name="description" content="{{ nombreempresa }}">
     <meta name="keywords" content="ICTIAIR, congreso internacional, inteligencia artificial, investigación, tecnología, evento académico, autores, innovación tecnológica, AI research, call for papers, conferencia internacional, UNEMI, International Conference on Technological Innovation and AI Research">
     <meta name="theme-color" content="#2874A6">
+    <meta name="robots" content="index, follow">
     {% if request.user.is_authenticated %}
         <meta name="user_id" content="{{ request.user.pk }}">
     {% endif %}
