feat: registro inscripciones

--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -11,6 +11,7 @@
     <meta name="keywords" content="ICTIAIR, congreso internacional, inteligencia artificial, investigación, tecnología, evento académico, autores, innovación tecnológica, AI research, call for papers, conferencia internacional, UNEMI, International Conference on Technological Innovation and AI Research">
     <meta name="theme-color" content="#2874A6">
     <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://ictiair.tiacon.org/">
     {% if request.user.is_authenticated %}
         <meta name="user_id" content="{{ request.user.pk }}">
     {% endif %}
