feat: registro inscripciones

--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -212,7 +212,7 @@
     </section>
 
     <!-- section begin -->
-    <section id="section-about" data-bgimage="url(static/exhibiz/images/bg/1.png) fixed no-repeat" class="mb-3">
+    <section id="section-about"  class="mb-3">
         <div class="wm wm-border wow fadeInDown">welcome</div>
         <div class="container">
             <div class="row align-items-center">
@@ -630,8 +630,7 @@
         </div>
     </section>
     <!-- section close -->
-    <section id="section-register" aria-label="section-services-tab"
-             data-bgimage="url(static/images/bg/2.jpg) fixed center no-repeat">
+    <section id="section-register" aria-label="section-services-tab">
         <div id="register-anchor" style="position: absolute; top: 0;"></div>
         <div class="wm wm-border wow fadeInDown">fees</div>
         <div class="container">
