--- a/templates/public/landing/landing.html
+++ b/templates/public/landing/landing.html
@@ -228,7 +228,7 @@
     </section>
 
     <!-- section begin -->
-    <section id="section-about" data-bgimage="url(static/exhibiz/images/bg/1.png) fixed no-repeat" class="mb-3">
+    <section id="section-about" class="mb-3">
         <div class="wm wm-border wow fadeInDown">welcome</div>
         <div class="container">
             <div class="row align-items-center">
@@ -982,8 +982,7 @@
     </section>
     <!-- section close -->
 
-    <section id="section-ticket" aria-label="section-services-tab"
-             data-bgimage="url(static/images/bg/2.jpg) fixed center no-repeat">
+    <section id="section-ticket" aria-label="section-services-tab">
         <div class="wm wm-border wow fadeInDown">fees</div>
         <div class="container">
             <div class="row">
